@@ -208,7 +208,6 @@ enum language
     language_auto,		/* Placeholder for automatic setting */
     language_c,			/* C */
     language_cplus,		/* C++ */
-    language_objc,		/* Objective-C */
     language_java,		/* Java */
     /* OBSOLETE language_chill,	*/	/* Chill */
     language_fortran,		/* Fortran */
@@ -446,8 +445,6 @@ extern void puts_filtered (const char *);
 
 extern void puts_unfiltered (const char *);
 
-extern void puts_filtered_tabular (char *string, int width, int right);
-
 extern void puts_debug (char *prefix, char *string, char *suffix);
 
 extern void vprintf_filtered (const char *, va_list) ATTR_FORMAT (printf, 1, 0);
@@ -533,6 +530,8 @@ extern void print_transfer_performance (struct ui_file *stream,
 /* From top.c */
 
 typedef void initialize_file_ftype (void);
+
+extern char *skip_quoted (char *);
 
 extern char *gdb_readline (char *);
 
