@@ -181,12 +181,6 @@ enum exp_opcode
        making three exp_elements.  */
     OP_FUNCALL,
 
-    /* OP_MSGCALL is followed by a string in the next exp_element and then an
-       integer.  The string is the selector string.  The integer is the number
-       of arguments to the message call.  That many plus one values are used, 
-       the first one being the object pointer.  This is an Objective C message */
-    OP_MSGCALL,
-
     /* This is EXACTLY like OP_FUNCALL but is semantically different.  
        In F77, array subscript expressions, substring expressions
        and function calls are  all exactly the same syntactically. They may 
@@ -279,17 +273,10 @@ enum exp_opcode
     STRUCTOP_STRUCT,
     STRUCTOP_PTR,
 
-    /* C++: 
-       OP_THIS is just a placeholder for the class instance variable.
+    /* C++ */
+    /* OP_THIS is just a placeholder for the class instance variable.
        It just comes in a tight (OP_THIS, OP_THIS) pair.  */
     OP_THIS,
-
-    /* Objective C: "@selector" pseudo-operator */
-    OP_SELECTOR,
-
-    /* Objective C: OP_SELF is just a placeholder for the class instance 
-       variable.  It just comes in a tight (OP_SELF, OP_SELF) pair.  */
-    OP_SELF,
 
     /* OP_SCOPE surrounds a type name and a field name.  The type
        name is encoded as one element, but the field name stays as
@@ -318,10 +305,7 @@ enum exp_opcode
     OP_NAME,
 
     /* An unparsed expression.  Used for Scheme (for now at least) */
-    OP_EXPRSTRING,
-
-    /* An Objective C Foundation Class NSString constant */
-    OP_NSSTRING
+    OP_EXPRSTRING
   };
 
 union exp_element
@@ -366,7 +350,7 @@ extern struct block *innermost_block;
 
 /* From eval.c */
 
-/* Values of NOSIDE argument to evaluate_subexp.  */
+/* Values of NOSIDE argument to eval_subexp.  */
 
 enum noside
   {
