@@ -549,7 +549,6 @@ binop_result_type (struct value *v1, struct value *v2)
     {
     case language_c:
     case language_cplus:
-    case language_objc:
       if (TYPE_CODE (t1) == TYPE_CODE_FLT)
 	return TYPE_CODE (t2) == TYPE_CODE_FLT && l2 > l1 ?
 	  VALUE_TYPE (v2) : VALUE_TYPE (v1);
@@ -787,7 +786,6 @@ integral_type (struct type *type)
     {
     case language_c:
     case language_cplus:
-    case language_objc:
       return (TYPE_CODE (type) != TYPE_CODE_INT) &&
 	(TYPE_CODE (type) != TYPE_CODE_ENUM) ? 0 : 1;
     case language_m2:
@@ -830,7 +828,6 @@ character_type (struct type *type)
 
     case language_c:
     case language_cplus:
-    case language_objc:
       return (TYPE_CODE (type) == TYPE_CODE_INT) &&
 	TYPE_LENGTH (type) == sizeof (char)
       ? 1 : 0;
@@ -853,7 +850,6 @@ string_type (struct type *type)
 
     case language_c:
     case language_cplus:
-    case language_objc:
       /* C does not have distinct string type. */
       return (0);
     default:
@@ -872,7 +868,6 @@ boolean_type (struct type *type)
     {
     case language_c:
     case language_cplus:
-    case language_objc:
       /* Might be more cleanly handled by having a
          TYPE_CODE_INT_NOT_BOOL for (OBSOLETE) CHILL and such
          languages, or a TYPE_CODE_INT_OR_BOOL for C.  */
@@ -909,7 +904,6 @@ structured_type (struct type *type)
     {
     case language_c:
     case language_cplus:
-    case language_objc:
       return (TYPE_CODE (type) == TYPE_CODE_STRUCT) ||
 	(TYPE_CODE (type) == TYPE_CODE_UNION) ||
 	(TYPE_CODE (type) == TYPE_CODE_ARRAY);
@@ -1130,7 +1124,6 @@ binop_type_check (struct value *arg1, struct value *arg2, int op)
 #ifdef _LANG_c
 	case language_c:
 	case language_cplus:
-	case language_objc:
 	  switch (op)
 	    {
 	    case BINOP_DIV:
