@@ -79,14 +79,6 @@ struct symtoken
     int is_a_field_of_this;
   };
 
-struct objc_class_str
-  {
-    struct stoken stoken;
-    struct type *type;
-    int class;
-  };
-
-
 /* For parsing of complicated types.
    An array should be preceded in the list by the size of the array.  */
 enum type_pieces
@@ -223,11 +215,6 @@ struct op_print
    and builtin regs. */
 
 extern int target_map_name_to_register (char *, int);
-
-/* for parsing Objective C */
-extern void start_msglist (void);
-extern void add_msglist (struct stoken *str, int addcolon);
-extern int end_msglist (void);
 
 /* Function used to avoid direct calls to fprintf
    in the code generated by the bison parser.  */
